# autopatchelf

./: .editorconfig  .gitignore  LICENSE  README.md  autopatchelf.py  benchmark.sh  devenv.nix  flake.nix  pyproject.toml
