[tool.poetry]
name = "autopatchelf"
version = "0.1.0"
description = ""
authors = ["Bob van der Linden <bobvanderlinden@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
autopatchelf = "autopatchelf:main"

[tool.poetry.dependencies]
python = "^3.10"
pyelftools = "^0.30"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
